# grocery-price-tracker

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  scrape.yml
dashboard/: index.html
data/: prices.db  prices.json
db/: models.py
matcher/: engine.py
scrapers/: flipp_client.py  run_all.py
tests/: test_flipp_client.py  test_matcher.py
