[project]
name = "grocery-price-tracker"
version = "0.1.0"
description = "Daily grocery price comparison for Saint-Hubert, QC via Flipp flyer API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "sqlalchemy>=2.0",
    "rapidfuzz>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["db*", "matcher*", "scrapers*"]
